[package]
name = "xsprite"
version = "0.1.0"
edition = "2021"

[dependencies]
toml = "0.7.4"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
dirs = "5"
breadx = { version = "3", features = ["xinput", "async", "xkb"] }
libc = "0.2.138"
tokio = { version = "1", features = ["full"] }
tokio-udev = "0.9.1"
signal-hook = "0.3.15"
signal-hook-tokio = { version ="0.3.1", features = ["futures-v0_3"] }
futures = "0.3.28"
shellexpand = "3"